tests/invalid/generated_binop_add_str_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: bytearray = bytearray(b"hello")
    z = x + y
